fix horizontal alignment of contact form

--- a/main.css
+++ b/main.css
@@ -483,7 +483,7 @@ div.col-md-10.col-md-offset-2 {
 }
 
 #contact-form .container {
-  margin: 0 30%;
+  margin: 0 15%;
 }
 
 #contact-form .requires {
